appId: com.curso.shopdemo
env:
    PRODUCT_NAME: ${PRODUCT_NAME || "Smartphone Pro 128GB"}
    PRODUCT_PRICE: ${PRODUCT_PRICE || "1.899,90"}
---
- scrollUntilVisible: 
    element: ${PRODUCT_NAME}
- tapOn: ${PRODUCT_NAME}
- assertVisible:
    id: "tela-detalhe"
- assertVisible: ${PRODUCT_NAME}
- assertVisible: "R$ ${PRODUCT_PRICE}"
- back