appId: com.curso.shopdemo
env:
    EMAIL_ADDRESS: ${EMAIL_ADDRESS || "cliente@shopdemo.com"}
    PASSWORD: ${PASSWORD || "123456"}
---
- extendedWaitUntil:
    visible:
        id: "input-email"
    timeout: 40000    
  
- tapOn:
    id: "input-email"
- inputText: "${EMAIL_ADDRESS}"
- tapOn:
    id: "input-senha"
- inputText: "${PASSWORD}"
- hideKeyboard
- tapOn: "btn-entrar"
- assertVisible: "Catalogo"
- assertNotVisible: "btn-entrar"

- assertNotVisible:
    id: "erro-login"
    text: "E-mail ou senha invalidos"

- extendedWaitUntil:
    visible: "tela-catalogo"
    timeout: 5000